# Python-Microservices-with-FastAPI

Chapter01/platform-home/: .pre-commit-config.yaml  pyproject.toml  test_main.py
Chapter02/parents-portal/: .pre-commit-config.yaml  pyproject.toml
Chapter02/parents-portal/app/: home.py  main.py
Chapter02/parents-portal/app/templates/: home-en.j2  home-fr.j2  home-it.j2  home-pt.j2
Chapter02/parents-portal/tests/: conftest.py  test_cookies.py  test_home_content.py  test_redirections.py
Chapter02/parents-portal/tests/__snapshots__/: test_home_content.ambr
Chapter02/parents-portal/tests/__snapshots__/test_home_content/: test_home_with_different_languages[homeen].ambr  test_home_with_different_languages[homefr].ambr  test_home_with_different_languages[homeit].ambr  test_home_with_different_languages[homept].ambr
