[project]
name = "platform-home"
version = "0.1.0"
description = "Platform Home Microservice with FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi[standard]>=0.116.1"
]

[dependency-groups]
dev = [
  "mypy>=1.17.1",
  "pre-commit>=4.2.0",
  "pytest>=8.4.1",
  "ruff>=0.12.8"
]

[tool.ruff]
line-length = 61

[tool.ruff.lint]
select = ["I", "E4", "E7", "F", "Q"]
